<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male" />

    <CheckBox
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female" />

    <Button
        android:id="@+id/resultCheckbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultCheckBox" />

    <TextView
        android:id="@+id/resultCheckView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultCheckBox"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food1"
            android:textSize="32sp" />

        <RadioButton
            android:id="@+id/water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food2"
            android:textSize="32sp" />
    </RadioGroup>

    <Button
        android:id="@+id/resultRadioBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultRadioButton" />

    <TextView
        android:id="@+id/resultViewRadioBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultCheckBox" />
</LinearLayout>